force-app/main/default/objects/Contract__c/fields/Amended_Amount__c.field-meta.xml
<CustomField>
  <fullName>Amended_Amount__c</fullName>
  <label>Amended Amount</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>
BLANKVALUE(Proposal_Amount__c, 0) + BLANKVALUE(Amendments_Total__c, 0)
  </formula>
  <description>Proposal amount plus the total of executed amendments.</description>
</CustomField>