force-app/main/default/objects/Contract__c/fields/Amendment_Count__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Count__c</fullName>
    <label>Amendment Count</label>
    <summaryFilterItems>
        <field>Contract_Amendment__c.Status__c</field>
        <operation>equals</operation>
        <value>Exectuted</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Amendment__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>