force-app/main/default/objects/Contract__c/fields/Amendments_Total__c.field-meta.xml
<CustomField>
  <fullName>Amendments_Total__c</fullName>
  <label>Amendments Total</label>
  <type>Summary</type>
  <summaryOperation>sum</summaryOperation>
  <summaryForeignKey>Contract_Amendment__c.Contract__c</summaryForeignKey>
  <summarizedField>Contract_Amendment__c.Contract_Fee__c</summarizedField>
  <summaryFilterItems>
    <field>Contract_Amendment__c.Status__c</field>
    <operation>equals</operation>
    <value>Executed</value>
  </summaryFilterItems>
  <description>Sum of all executed Contract Amendments (signed amount).</description>
</CustomField>