force-app/main/default/objects/Contract__c/fields/Company_Signer__c.field-meta.xml
<CustomField>
    <fullName>Company_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Company Signer)</relationshipLabel>
    <relationshipName>Company_Signer_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>