force-app/main/default/objects/Contract__c/fields/Contract_Fee__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fee__c</fullName>
    <label>Contract Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>