force-app/main/default/objects/Contract__c/fields/Contract_Template__c.field-meta.xml
<CustomField>
    <fullName>Contract_Template__c</fullName>
    <label>Contract Template</label>
    <referenceTo>Contract_Template__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contract_Template_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>