force-app/main/default/objects/Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
  <fullName>Contract_Type__c</fullName>
  <label>Contract Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <sorted>true</sorted>
      <value><fullName>Service Agreement</fullName><default>true</default><label>Service Agreement</label></value>
      <value><fullName>Contractor Agreement</fullName><default>false</default><label>Contractor Agreement</label></value>
      <value><fullName>General Agreement</fullName><default>false</default><label>General Agreement</label></value>
      <value><fullName>Non-Disclosure Agreement</fullName><default>false</default><label>Non-Disclosure Agreement</label></value>
      <value><fullName>Master Service Agreement</fullName><default>false</default><label>Master Service Agreement</label></value>
      <value><fullName>Time and Materials</fullName><default>false</default><label>Time and Materials</label></value>
      <value><fullName>Fixed Price</fullName><default>false</default><label>Fixed Price</label></value>
      <value><fullName>Managed Service Agreement</fullName><default>false</default><label>Managed Service Agreement</label></value>
      <value><fullName>Statement of Work</fullName><default>false</default><label>Statement of Work</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>