force-app/main/default/objects/Contract__c/fields/Counterparty_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Signed_Date__c</fullName>
    <label>Counterparty Signed Date</label>
    <type>Date</type>
</CustomField>