force-app/main/default/objects/Contract__c/fields/Counterparty_Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Signer__c</fullName>
    <label>Counterparty Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Counterparty Signer)</relationshipLabel>
    <relationshipName>Counterparty_Signer_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>