force-app/main/default/objects/Contract__c/fields/Counterparty_Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Signer_Title__c</fullName>
    <label>Counterparty Signer Title</label>
    <length>36</length>
    <type>Text</type>
</CustomField>