force-app/main/default/objects/Contract__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Document_Template_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>