force-app/main/default/objects/Contract__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Proposal_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>