force-app/main/default/objects/Contract__c/fields/Proposal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Amount__c</fullName>
    <description>Displays Proposal__r.Total_Amount__c as currency on this object.</description>
    <formula>Proposal__r.Total_Amount__c</formula>
    <label>Proposal Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>